# RegPlate

./: .gitignore  CMakeLists.txt  kfz.json  main.cpp
